--- a/assets/style/game.css
+++ b/assets/style/game.css
@@ -7,40 +7,6 @@ body {
     justify-content: left;
 }
 
-.answer-choice {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.choice-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.false {
-    margin-left: 30px;
-}
-
-.choice-container p {
-    color: black;
-    width: 100%;
-    border-radius: 5px;
-    background: rgb(20, 167, 20);
-    font-size: 2vw;
-    min-width: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.choice-container:hover {
-    
-    box-shadow: 5px 4px 100px 10px rgb(20, 167, 20);
-    transition: transform 150ms;
-    transform: scale(1.03);
-    cursor: pointer;
-} 
-
 .question {
     font-size: 2.5vw;
     margin-bottom: 40px;
@@ -56,8 +22,9 @@ body {
     margin-bottom: 40px;
 }
 
-@media screen and (max-width: 768px) {
-    .choice-container {
-        min-width: 200px;
-    }
+.timer {
+    font-size: 3vw;
+    
 }
+
+
