--- a/assets/style/highscores.css
+++ b/assets/style/highscores.css
@@ -4,13 +4,11 @@
 
 #highScoresList {
     list-style: none;
-    margin-bottom: 10px;
+    margin: 10px 0px;
 }
 
-
-
 .high-score {
-    font-size: 15px;
+    font-size: 1.5vw;
     margin-bottom: 10px;
     color: white;
 }
